--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "express": "^5.1.0",
+    "redis": "^5.5.6",
     "socket.io": "^4.8.1"
   }
 }
